@@ -11,6 +11,7 @@ Export-Package: org.mortbay.component,
  org.mortbay.io,
  org.mortbay.io.bio,
  org.mortbay.io.nio,
+ org.mortbay.io.tx,
  org.mortbay.jetty,
  org.mortbay.jetty.bio,
  org.mortbay.jetty.handler,
