@@ -34,7 +34,7 @@ import com.noelios.restlet.ExtractFilter;
 import com.noelios.restlet.GuardFilter;
 import com.noelios.restlet.HostRouter;
 import com.noelios.restlet.LogFilter;
-import com.noelios.restlet.RedirectHandler;
+import com.noelios.restlet.RedirectRestlet;
 import com.noelios.restlet.StatusFilter;
 
 /**
@@ -252,7 +252,7 @@ public class FilterBuilder extends RestletBuilder
     */
    public RestletBuilder attachRedirect(String targetPattern, int mode)
    {
-      RedirectHandler node = new RedirectHandler(getNode().getContext(), targetPattern, mode);
+      RedirectRestlet node = new RedirectRestlet(getNode().getContext(), targetPattern, mode);
       getNode().setNext(node);
       return Builders.buildRestlet(this, node);
    }
@@ -264,7 +264,7 @@ public class FilterBuilder extends RestletBuilder
     */
    public RestletBuilder attachRedirect(String targetPattern)
    {
-      RedirectHandler node = new RedirectHandler(getNode().getContext(), targetPattern);
+      RedirectRestlet node = new RedirectRestlet(getNode().getContext(), targetPattern);
       getNode().setNext(node);
       return Builders.buildRestlet(this, node);
    }
